src/compiler/tests/valid/valid_program2/valid_program2.klt
fun potencia (base: Int; exp: Int) : Int {
  var resultado: Int = 1;

  while (exp > 0) {
    resultado = resultado * base;
    exp = exp - 1;
  }

  return resultado;
}

fun main () : None {

    var acabar: Boolean = false;
    var base: Int = 10;
    var exp: Int = 4;
    var resultado: Int;
    var frase2 : String = "Con exponente %d.";
    val frase1 : String = "La potencia de %d.";

    while (!acabar) {

       resultado = potencia(base, exp);
       print(frase1, base);
       print(frase2, exp);
       print("Es... %d.", resultado);

       base = base - 1;

       if (base <= 0) {
           acabar = true;
       }
    }

    print("Fin del programa.");
}