src/compiler/tests/invalid/invalid_program2/invalid_program2.klt
// FALTA DECLARAR FRASE

fun potencia (base: Int; exp: Int) : Boolean { // RETURN DE TIPO ERRONEO
  var resultado: Int = 1;

  while (exp > 0) {
    resultado = resultado * base;
    exp = exp -1;
  }

  return resultado;
}

fun noMain () : None { // FALTA FUNCION MAIN

    var acabar: Boolean = false;
    var base: Int = 10;
    var exp: Int = 4;
    var factorialRes: Int;

    while (!acabar) {

       factorialRes = potencia(base, exp);
       print(frase, factorialRes);
       base = base -1;

       if (exp <= 0) {
           acabar >= true; // ERROR GRAMATICAL
       }
    }

    print("Fin del programa");
}